--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "husky": "0.14.3",
     "inquirer": "5.2.0",
     "is-ci": "1.1.0",
-    "jest": "22.1.2",
+    "jest": "^22.1.2",
     "lint-staged": "7.0.4",
     "lodash.omit": "4.5.0",
     "node": "8.9.4",
@@ -118,5 +118,8 @@
     "coverage",
     "workshop-setup.js",
     "other/coverage-example"
-  ]
+  ],
+  "dependencies": {
+    "babel-plugin-syntax-dynamic-import": "^6.18.0"
+  }
 }
